--- a/ai.html
+++ b/ai.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2024-11-18" />
+<meta name="date" content="2025-01-01" />
 
 <title>AI</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">AI</h1>
-<h4 class="date">2024-11-18</h4>
+<h4 class="date">2025-01-01</h4>
 
 </div>
 
@@ -1555,25 +1555,45 @@ content generation.</p>
 <li>产出</li>
 </ul>
 </div>
-<div id="国内大模型" class="section level2">
-<h2>国内大模型</h2>
+<div id="国内大模型及应用" class="section level2">
+<h2>国内大模型及应用</h2>
 <ul>
 <li>文心一言</li>
-<li>通义千问</li>
-<li>讯飞星火</li>
+<li>通义千问、万相</li>
+<li>讯飞星火、智文</li>
 <li>WPS AI</li>
-<li>腾讯元宝</li>
+<li>腾讯元宝、智影</li>
 <li>智谱清言</li>
 <li>秘塔AI</li>
 <li>KIMI</li>
 <li>360AI（浏览器，助手）</li>
 <li>豆包</li>
+<li>ima.copilot</li>
+<li>剪映</li>
+<li>Coze</li>
 </ul>
 </div>
 </div>
 <div id="ai及在线作图" class="section level1">
 <h1>AI及在线作图</h1>
-<p><a href="https://echarts.apache.org/zh/index.html">ECharts</a> <a href="https://www.bic.ac.cn/ImageGP/index.php">ImageGP</a> <a href="https://www.bic.ac.cn/BIC">ImageGP2</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://mermaid.js.org">Mermaid</a> <a href="https://mermaid.live">Mermaid 编辑器</a> <a href="https://draw.io">Diagram1</a> <a href="https://app.diagrams.net">Diagram2</a></p>
+<p><a href="https://echarts.apache.org/zh/index.html">ECharts</a> <a href="https://www.bic.ac.cn/ImageGP/index.php">ImageGP</a> <a href="https://www.bic.ac.cn/BIC">ImageGP2</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://mermaid.js.org">Mermaid</a> <a href="https://mermaid.live">Mermaid 编辑器</a> <a href="https://markdown-map.com">Markdownmap</a> <a href="https://draw.io">Diagram1</a> <a href="https://app.diagrams.net">Diagram2</a></p>
+<p><a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai">AI可视化napkin</a></p>
+<div id="chatgpt-4osmartart" class="section level2">
+<h2>ChatGPT-4o+SmartART</h2>
+<ul>
+<li>请罗列出灵长目各科、属、种的动物。输出格式中，每个科、属、种、或动物单独占一行；级别每低一级，就缩进一个制表位；只保留中文</li>
+<li>贴至PPT，选中，转换为SmartART</li>
+</ul>
+</div>
+<div id="绘制思维导图" class="section level2">
+<h2>绘制思维导图</h2>
+<ul>
+<li>请整理大学《人体解剖学》课程的内容体系，约32课时的内容，整理成四级的树状结构。输出为详细的markdown格式。</li>
+<li>markdown-map.com</li>
+<li>导出为SVG格式</li>
+<li>整理某网址的内容要点，列写为三级的树状结构，输出为markdown格式。</li>
+</ul>
+</div>
 <div id="kimi绘制流程图" class="section level2">
 <h2>Kimi绘制流程图</h2>
 <ul>
@@ -1592,8 +1612,14 @@ content generation.</p>
 <li>以“是否去游泳”的决策为例子来绘制一个决策树的流程图，因素包括：天气、水温、空闲时间、泳池开放、心情</li>
 </ul>
 </div>
-<div id="chatgpt-4o" class="section level2">
-<h2>ChatGPT-4o</h2>
+<div id="chatgpt-4o-mermaid图" class="section level2">
+<h2>ChatGPT-4o-Mermaid图</h2>
+<ul>
+<li>请帮我画一个比较复杂的流程图，输出为mermaid格式</li>
+</ul>
+</div>
+<div id="chatgpt-4o绘制数据图" class="section level2">
+<h2>ChatGPT-4o绘制数据图</h2>
 <ul>
 <li>班级 均分</li>
 <li>一班 85</li>
@@ -1861,6 +1887,56 @@ professional and respectful tone throughout.</li>
 </ul>
 <p>Ten simple rules for structuring papers How to use ChatGPT fro
 Scientific Research Paper writing?</p>
+</div>
+</div>
+<div id="音视频" class="section level1">
+<h1>音视频</h1>
+<div id="音" class="section level2">
+<h2>音</h2>
+<p>配音</p>
+<ul>
+<li><a href="https://www.ttsmaker.cn">TTsmaker</a></li>
+<li><a href="https://elevenlabs.io/">TTS-Elevenlabs</a></li>
+<li>请帮我写一首关于秋天的诗，我想把它配上一段钢琴曲，让它听起来更加动人。</li>
+<li>请帮我写一首关于爱情的歌词，我想把它编曲成一首流行歌曲。</li>
+<li>请帮我写一段关于自然的旋律，我想把它制作成一个音乐盒。</li>
+</ul>
+<p>音乐</p>
+<ul>
+<li><a href="https://www.suno.com">suno</a></li>
+<li><a href="https://www.haimian.com">Haimian</a></li>
+</ul>
+<p>对话</p>
+<ul>
+<li>豆包</li>
+<li><a href="https://aistudio.google.com">AIstudio</a></li>
+<li>chatgpt.openai.com</li>
+</ul>
+</div>
+<div id="视频" class="section level2">
+<h2>视频</h2>
+<p>动画</p>
+<p>视频</p>
+<ul>
+<li>sora</li>
+<li><a href="https://www.pika.art">Pika</a></li>
+<li>runway</li>
+</ul>
+</div>
+<div id="多模态" class="section level2">
+<h2>多模态</h2>
+<p>数字人</p>
+<ul>
+<li><a href="https://www.heygen.com">Heygen</a></li>
+<li>d-id</li>
+<li>腾讯智影</li>
+<li>剪映</li>
+</ul>
+<p>视频通话</p>
+<ul>
+<li><a href="https://aistudio.google.com">AIstudio</a></li>
+<li>chatgpt.openai.com</li>
+</ul>
 </div>
 </div>
 <div id="chatgpt-4o-with-canvas" class="section level1">
