--- a/ai.html
+++ b/ai.html
@@ -1577,7 +1577,8 @@ content generation.</p>
 <div id="ai及在线作图" class="section level1">
 <h1>AI及在线作图</h1>
 <p><a href="https://echarts.apache.org/zh/index.html">ECharts</a> <a href="https://www.bic.ac.cn/ImageGP/index.php">ImageGP</a> <a href="https://www.bic.ac.cn/BIC">ImageGP2</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://mermaid.js.org">Mermaid</a> <a href="https://mermaid.live">Mermaid 编辑器</a> <a href="https://markdown-map.com">Markdownmap</a> <a href="https://draw.io">Diagram1</a> <a href="https://app.diagrams.net">Diagram2</a></p>
-<p><a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai">AI可视化napkin</a></p>
+<p><a href="https://infografix.app/app">可视化infografix</a></p>
+<p><a href="https://www.napkin.ai">AI可视化napkin</a></p>
 <div id="chatgpt-4osmartart" class="section level2">
 <h2>ChatGPT-4o+SmartART</h2>
 <ul>
