--- a/ai.html
+++ b/ai.html
@@ -1568,6 +1568,7 @@ content generation.</p>
 <li>KIMI</li>
 <li>360AI（浏览器，助手）</li>
 <li>豆包</li>
+<li>Deepseek</li>
 <li>ima.copilot</li>
 <li>剪映</li>
 <li>Coze</li>
@@ -1907,7 +1908,12 @@ Scientific Research Paper writing?</p>
 <li><a href="https://www.suno.com">suno</a></li>
 <li><a href="https://www.haimian.com">Haimian</a></li>
 </ul>
-<p>对话</p>
+<p>智能播客</p>
+<ul>
+<li>豆包（朗读）</li>
+<li><a href="https://notebooklm.google.com">NotebookLM</a></li>
+</ul>
+<p>实时对话</p>
 <ul>
 <li>豆包</li>
 <li><a href="https://aistudio.google.com">AIstudio</a></li>
@@ -1933,7 +1939,7 @@ Scientific Research Paper writing?</p>
 <li>腾讯智影</li>
 <li>剪映</li>
 </ul>
-<p>视频通话</p>
+<p>视频通话(实时)</p>
 <ul>
 <li><a href="https://aistudio.google.com">AIstudio</a></li>
 <li>chatgpt.openai.com</li>
@@ -2380,6 +2386,37 @@ example</li>
 </ul></li>
 </ul>
 </div>
+</div>
+<div id="coding" class="section level1">
+<h1>Coding</h1>
+<ul>
+<li>Chatgpt</li>
+<li>Github Copilot</li>
+<li>Cursor（IDE）</li>
+</ul>
+</div>
+<div id="ppt" class="section level1">
+<h1>PPT</h1>
+<ul>
+<li>Gamma</li>
+<li>讯飞智文</li>
+<li>WPS AI</li>
+</ul>
+</div>
+<div id="app" class="section level1">
+<h1>APP</h1>
+<ul>
+<li>Coze</li>
+<li>Cursor</li>
+<li>小程序<a href="https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html">腾讯AI代码助手</a></li>
+</ul>
+</div>
+<div id="工作流" class="section level1">
+<h1>工作流</h1>
+<ul>
+<li>Maker</li>
+<li><a href="https://dify.ai">dify</a></li>
+</ul>
 </div>
 <div id="ai-links" class="section level1">
 <h1>AI Links</h1>
