--- a/url.html
+++ b/url.html
@@ -1490,7 +1490,10 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="tools" class="section level1">
 <h1>Tools</h1>
-<p><a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://draw.io">Draw.io</a> <a href="https://markdown-map.com">Mardownmap</a> <a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai">AI可视化napkin</a> <a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
+<p><a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a></p>
+<p><a href="https://excalidraw.com">Excalidraw</a> <a href="https://draw.io">Draw.io</a> <a href="https://markdown-map.com">Mardownmap</a> <a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai">AI可视化napkin</a></p>
+<p><a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a></p>
+<p><a href="https://www.recraft.ai/">Recraft</a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
