--- a/ai.html
+++ b/ai.html
@@ -1582,9 +1582,13 @@ content generation.</p>
 <p><a href="https://www.napkin.ai">AI可视化napkin</a></p>
 <div id="ai作图及编辑" class="section level2">
 <h2>AI作图及编辑</h2>
+<p>recraft可以生图及编辑，可导出svg矢量图格式，另外还可生成组图image
+sets</p>
 <ul>
 <li>[recraft]<a href="https://www.recraft.ai/" class="uri">https://www.recraft.ai/</a></li>
 <li><a href="https://www.bilibili.com/video/BV1egm8YvEQs/?spm_id_from=333.1387.upload.video_card.click&amp;vd_source=8b4d4a8872e783ddb30a5cd9948f167d">示例</a></li>
+<li><a href="https://leonardo.ai/">Leonardo</a></li>
+<li>通义万相</li>
 </ul>
 </div>
 <div id="chatgpt-4osmartart" class="section level2">
@@ -2420,8 +2424,8 @@ example</li>
 <li>WPS AI</li>
 </ul>
 </div>
-<div id="agent" class="section level1">
-<h1>Agent</h1>
+<div id="agent互动" class="section level1">
+<h1>Agent（互动）</h1>
 <p>豆包–选中文字–优化提示词</p>
 <ul>
 <li>清晰直接–明确要做什么，不要让它猜</li>
