--- a/ai.html
+++ b/ai.html
@@ -1928,6 +1928,7 @@ Scientific Research Paper writing?</p>
 <ul>
 <li><a href="https://www.suno.com">suno</a></li>
 <li><a href="https://www.haimian.com">Haimian</a></li>
+<li>天工AI</li>
 </ul>
 <p>智能播客</p>
 <ul>
@@ -1957,8 +1958,8 @@ Scientific Research Paper writing?</p>
 <ul>
 <li><a href="https://www.heygen.com">Heygen</a></li>
 <li>d-id</li>
-<li>腾讯智影</li>
-<li>剪映</li>
+<li>腾讯智影（可去视频水印）</li>
+<li>剪映（形象定制、一键成片）</li>
 </ul>
 <p>视频通话(实时)</p>
 <ul>
