--- a/url.html
+++ b/url.html
@@ -1477,7 +1477,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
 <div id="ai" class="section level1">
 <h1>AI</h1>
-<p><a href="https://chatgpt.com">ChatGPT</a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
+<p><a href="https://chatgpt.com"><strong>ChatGPT</strong></a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
 <p><a href="https://perplexity.ai">Perplexity</a> <a href="https://mplx.run">MiniPerplexity</a></p>
 <p><a href="https://aistudio.google.com/">AIstudio</a> <a href="https://deepseek.com">Deepseek</a></p>
 <p><a href="https://www.doubao.com">doubao</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com">NotebookLM</a></p>
