--- a/url.html
+++ b/url.html
@@ -1478,12 +1478,12 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="ai" class="section level1">
 <h1>AI</h1>
 <p><a href="https://chatgpt.com"><strong>ChatGPT</strong></a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
-<p><a href="https://perplexity.ai">Perplexity</a> <a href="https://mplx.run">MiniPerplexity</a></p>
-<p><a href="https://aistudio.google.com/">AIstudio</a> <a href="https://deepseek.com">Deepseek</a></p>
-<p><a href="https://www.doubao.com">doubao</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com">NotebookLM</a></p>
-<p><a href="https://www.suno.ai">suno</a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a></p>
-<p><a href="https://www.coze.com">Coze</a></p>
-<p><a href="ai.html">AI应用</a></p>
+<p><a href="https://perplexity.ai"><strong>Perplexity</strong></a> <a href="https://mplx.run">MiniPerplexity</a></p>
+<p><a href="https://aistudio.google.com/"><em>AIstudio</em></a> <a href="https://deepseek.com">Deepseek</a></p>
+<p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com"><strong>NotebookLM</strong></a></p>
+<p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a></p>
+<p><a href="https://www.coze.com"><strong>Coze</strong></a></p>
+<p><a href="ai.html"><strong>AI应用</strong></a></p>
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
