--- a/url.html
+++ b/url.html
@@ -1482,7 +1482,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://aistudio.google.com/"><em>AIstudio</em></a> <a href="https://deepseek.com">Deepseek</a></p>
 <p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com"><strong>NotebookLM</strong></a></p>
 <p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a></p>
-<p><a href="https://www.coze.com"><strong>Coze</strong></a></p>
+<p><a href="https://www.coze.com"><strong>Coze</strong></a>
+[Bolt.new]</p>
 <p><a href="ai.html"><strong>AI应用</strong></a></p>
 </div>
 <div id="media" class="section level1">
