--- a/anova.html
+++ b/anova.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="ChatGPT 4o" />
 
-<meta name="date" content="2024-11-26" />
+<meta name="date" content="2025-01-21" />
 
 <title>One-Way ANOVA</title>
 
@@ -1564,7 +1564,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">One-Way ANOVA</h1>
 <h4 class="author">ChatGPT 4o</h4>
-<h4 class="date">2024-11-26</h4>
+<h4 class="date">2025-01-21</h4>
 
 </div>
 
@@ -2068,7 +2068,7 @@ $(document).ready(function ()  {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-MML-AM_CHTML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
