--- a/index.html
+++ b/index.html
@@ -382,6 +382,9 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="independent-samples-t-test" class="section level3">
 <h3><a href="t_test2.html">independent samples t-test</a></h3>
 </div>
+<div id="variance-homogeneity-test" class="section level3">
+<h3><a href="variance.html">variance homogeneity test</a></h3>
+</div>
 <div id="paired-samples-t-test" class="section level3">
 <h3><a href="paired_t.html">paired samples t-test</a></h3>
 </div>
