--- a/ai.html
+++ b/ai.html
@@ -1923,6 +1923,7 @@ Scientific Research Paper writing?</p>
 <li>请帮我写一首关于秋天的诗，我想把它配上一段钢琴曲，让它听起来更加动人。</li>
 <li>请帮我写一首关于爱情的歌词，我想把它编曲成一首流行歌曲。</li>
 <li>请帮我写一段关于自然的旋律，我想把它制作成一个音乐盒。</li>
+<li><a href="https://hailuoai.com/audio">海螺语音</a></li>
 </ul>
 <p>音乐</p>
 <ul>
