--- a/ai.html
+++ b/ai.html
@@ -1575,6 +1575,14 @@ content generation.</p>
 </ul>
 </div>
 </div>
+<div id="deepseek" class="section level1">
+<h1>DeepSeek</h1>
+<p><a href="https://www.deepseek.com">DeepSeek</a> <a href="https://api-docs.deepseek.com/zh-cn/prompt-library/">提示词样例库</a></p>
+</div>
+<div id="豆包" class="section level1">
+<h1>豆包</h1>
+<p><a href="https://www.doubao.com">豆包</a>–浏览器常用快捷功能</p>
+</div>
 <div id="ai及在线作图" class="section level1">
 <h1>AI及在线作图</h1>
 <p><a href="https://echarts.apache.org/zh/index.html">ECharts</a> <a href="https://www.bic.ac.cn/ImageGP/index.php">ImageGP</a> <a href="https://www.bic.ac.cn/BIC">ImageGP2</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://mermaid.js.org">Mermaid</a> <a href="https://mermaid.live">Mermaid 编辑器</a> <a href="https://markdown-map.com">Markdownmap</a> <a href="https://draw.io">Diagram1</a> <a href="https://app.diagrams.net">Diagram2</a></p>
@@ -1904,7 +1912,7 @@ Scientific Research Paper writing?</p>
 </div>
 <div id="ocr提取文字" class="section level1">
 <h1>OCR提取文字</h1>
-<div id="deepseek" class="section level2">
+<div id="deepseek-1" class="section level2">
 <h2>deepseek</h2>
 <ul>
 <li>上传图片</li>
