--- a/ai.html
+++ b/ai.html
@@ -1577,7 +1577,7 @@ content generation.</p>
 </div>
 <div id="deepseek" class="section level1">
 <h1>DeepSeek</h1>
-<p><a href="https://www.deepseek.com">DeepSeek</a> <a href="https://api-docs.deepseek.com/zh-cn/prompt-library/">提示词样例库</a></p>
+<p><a href="https://www.deepseek.com">DeepSeek</a>–推理过程 <a href="https://api-docs.deepseek.com/zh-cn/prompt-library/">提示词样例库</a></p>
 </div>
 <div id="豆包" class="section level1">
 <h1>豆包</h1>
