--- a/ai.html
+++ b/ai.html
@@ -1578,7 +1578,7 @@ content generation.</p>
 <div id="deepseek" class="section level1">
 <h1>DeepSeek</h1>
 <p><a href="https://www.deepseek.com">DeepSeek</a>–推理型模型 <a href="https://api-docs.deepseek.com/zh-cn/prompt-library/">提示词样例库</a></p>
-<p><a href="https://bot.360.cn">360DeepSeek</a></p>
+<p><a href="https://bot.360.com">360DeepSeek</a></p>
 </div>
 <div id="豆包" class="section level1">
 <h1>豆包</h1>
