--- a/ai.html
+++ b/ai.html
@@ -1611,7 +1611,7 @@ sets</p>
 <h2>绘制思维导图</h2>
 <ul>
 <li>请整理大学《人体解剖学》课程的内容体系，约32课时的内容，整理成四级的树状结构。输出为详细的markdown格式。</li>
-<li>markdown-map.com</li>
+<li><a href="https://markdown-map.com/">markdown-map.com</a></li>
 <li>导出为SVG格式</li>
 <li>整理某网址的内容要点，列写为三级的树状结构，输出为markdown格式。</li>
 </ul>
