--- a/ai.html
+++ b/ai.html
@@ -1584,9 +1584,9 @@ content generation.</p>
 <h1>豆包</h1>
 <p><a href="https://www.doubao.com">豆包</a>–浏览器常用快捷功能</p>
 </div>
-<div id="千问artifacts" class="section level1">
-<h1>千问(artifacts)</h1>
-<p><a href="chat.qwenlm.ai">Qwen2.5-Max</a>—artifacts功能</p>
+<div id="千问artifacts功能" class="section level1">
+<h1>千问(artifacts功能)</h1>
+<p><a href="chat.qwenlm.ai">Qwen2.5-Max</a>—artifacts</p>
 <ul>
 <li>200位学生中男生160人，女生40人，进行分层抽样，抽取男生8人，女生2人。</li>
 <li>将上面的内容输出为，符合微信公众号、微博、朋友圈、小红书知识卡片风格，配色要有科技感高级感，背景清爽色，务必保证文字显示清晰，布局要松紧有度，卡片内容包含适合的emoji图标，大气漂亮。</li>
