--- a/ai.html
+++ b/ai.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-02-13" />
+<meta name="date" content="2025-02-14" />
 
 <title>AI</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">AI</h1>
-<h4 class="date">2025-02-13</h4>
+<h4 class="date">2025-02-14</h4>
 
 </div>
 
@@ -1572,6 +1572,7 @@ content generation.</p>
 <li>ima.copilot</li>
 <li>剪映</li>
 <li>Coze</li>
+<li>Sider/chatbox/poe</li>
 </ul>
 </div>
 </div>
@@ -1586,12 +1587,13 @@ content generation.</p>
 </div>
 <div id="千问artifacts功能" class="section level1">
 <h1>千问(artifacts功能)</h1>
-<p><a href="chat.qwenlm.ai">Qwen2.5-Max</a>—artifacts</p>
+<p><a href="chat.qwenlm.ai">Qwen2.5-Max</a>—artifacts,编写代码(html,javascript,python等)并通过artifacts生成图像文件，并预览（千问与DEEPSEEK皆可）。</p>
 <ul>
 <li>200位学生中男生160人，女生40人，进行分层抽样，抽取男生8人，女生2人。</li>
 <li>将上面的内容输出为，符合微信公众号、微博、朋友圈、小红书知识卡片风格，配色要有科技感高级感，背景清爽色，务必保证文字显示清晰，布局要松紧有度，卡片内容包含适合的emoji图标，大气漂亮。</li>
 <li>画一条标准正态分布曲线。</li>
 <li>generate a matrix style green code digital rain</li>
+<li>绘制一个大转盘，共有6个选项，由中心的按钮来控制转盘的旋转，转盘旋转的速度逐渐减慢，最终停在一个选项上。</li>
 </ul>
 <p><a href="https://chatwise.app">ChatWise</a>–artifacts</p>
 </div>
