--- a/ai.html
+++ b/ai.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-02-14" />
+<meta name="date" content="2025-03-03" />
 
 <title>AI</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">AI</h1>
-<h4 class="date">2025-02-14</h4>
+<h4 class="date">2025-03-03</h4>
 
 </div>
 
@@ -1973,6 +1973,7 @@ Scientific Research Paper writing?</p>
 <li>sora <a href="https://www.bilibili.com/video/BV1iKquYnELN/?spm_id_from=333.1387.upload.video_card.click&amp;vd_source=8b4d4a8872e783ddb30a5cd9948f167d">教程</a></li>
 <li><a href="https://www.pika.art">Pika</a></li>
 <li>runway</li>
+<li>通义万相（<a href="https://tongyi.aliyun.com/wanxiang" class="uri">https://tongyi.aliyun.com/wanxiang</a>）</li>
 </ul>
 </div>
 <div id="多模态" class="section level2">
