--- a/url.html
+++ b/url.html
@@ -1484,11 +1484,12 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
 [Bolt.new]</p>
+<p><a href="https://sider.ai"><strong>Sider</strong></a></p>
 <p><a href="ai.html"><strong>AI应用</strong></a></p>
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
-<p><a href="https://www.sohu.com">Sohu</a> <a href="http://www.yznews.com.cn">Yz</a> <a href="https://weibo.com/mygroups?gid=3667142241545265">Weibo</a> <a href="https://www.bilibili.com">Bilibili</a> <a href="https://zz123.com/suibian.htm">Music</a> <a href="https://www.ikanbot.com">Video</a> <a href="https://mail.163.com">mail</a></p>
+<p><a href="https://www.sohu.com">Sohu</a> <a href="http://www.yznews.com.cn">Yz</a> <a href="https://weibo.com/mygroups?gid=3667142241545265">Weibo</a> <a href="https://www.bilibili.com">Bilibili</a> <a href="https://www.1ting.com/rand.php?g=136">Music1</a> <a href="https://zz123.com/suibian.htm">Music2</a> <a href="https://www.ikanbot.com">Video</a> <a href="https://mail.163.com">mail</a></p>
 </div>
 <div id="tools" class="section level1">
 <h1>Tools</h1>
@@ -1497,6 +1498,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a></p>
 <p><a href="https://www.recraft.ai/"><strong>Recraft</strong></a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
 <p><a href="https://blog.csdn.net/qq_66536007/article/details/140515188">overleaft</a></p>
+<p><a href="https://tool.liumingye.cn">liumingyetool</a></p>
+<p><a href="音视频批注"><strong>Kami插件</strong></a> <a href="https://woordwall.net">Wordwall</a>交互式游戏</p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
