--- a/url.html
+++ b/url.html
@@ -1489,7 +1489,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
-<p><a href="https://www.sohu.com">Sohu</a> <a href="http://www.yznews.com.cn">Yz</a> <a href="https://weibo.com/mygroups?gid=3667142241545265">Weibo</a> <a href="https://www.bilibili.com">Bilibili</a> <a href="https://www.1ting.com/rand.php?g=136">Music1</a> <a href="https://zz123.com/suibian.htm">Music2</a> <a href="https://www.ikanbot.com">Video</a> <a href="https://mail.163.com">mail</a></p>
+<p><a href="https://www.sohu.com">Sohu</a> <a href="http://www.yznews.com.cn">Yz</a> <a href="https://weibo.com/mygroups?gid=3667142241545265">Weibo</a> <a href="https://www.bilibili.com">Bilibili</a> <a href="https://www.1ting.com/rand.php">Music1</a> <a href="https://zz123.com/suibian.htm">Music2</a> <a href="https://www.ikanbot.com">Video</a> <a href="https://mail.163.com">mail</a></p>
 </div>
 <div id="tools" class="section level1">
 <h1>Tools</h1>
