--- a/ai.html
+++ b/ai.html
@@ -1946,6 +1946,7 @@ Scientific Research Paper writing?</p>
 <li>请帮我写一首关于爱情的歌词，我想把它编曲成一首流行歌曲。</li>
 <li>请帮我写一段关于自然的旋律，我想把它制作成一个音乐盒。</li>
 <li><a href="https://hailuoai.com/audio">海螺语音</a></li>
+<li><a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a></li>
 </ul>
 <p>音乐</p>
 <ul>
