--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2024-11-18" />
+<meta name="date" content="2025-03-06" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2024-11-18</h4>
+<h4 class="date">2025-03-06</h4>
 
 </div>
 
@@ -1485,6 +1485,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
 [Bolt.new]</p>
+<p><a href="https://manus.im"><strong>Manus</strong></a></p>
 <p><a href="ai.html"><strong>AI应用</strong></a></p>
 </div>
 <div id="media" class="section level1">
