--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-03-06" />
+<meta name="date" content="2025-03-13" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-03-06</h4>
+<h4 class="date">2025-03-13</h4>
 
 </div>
 
@@ -1482,7 +1482,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://perplexity.ai"><strong>Perplexity</strong></a> <a href="https://mplx.run">MiniPerplexity</a></p>
 <p><a href="https://aistudio.google.com/"><em>AIstudio</em></a> <a href="https://deepseek.com">Deepseek</a></p>
 <p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com"><strong>NotebookLM</strong></a></p>
-<p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a></p>
+<p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a> <a href="https://www.canva.com">Canvas</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
 [Bolt.new]</p>
 <p><a href="https://manus.im"><strong>Manus</strong></a></p>
@@ -1495,13 +1495,15 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="tools" class="section level1">
 <h1>Tools</h1>
 <p><a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a></p>
+<p><a href="https://www.turnitin.com">turnitin</a></p>
 <p><a href="https://excalidraw.com"><strong>Excalidraw</strong></a> <a href="https://draw.io">Draw.io</a> <a href="https://markdown-map.com">Mardownmap</a> <a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai"><strong>AI可视化napkin</strong></a></p>
 <p><a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a></p>
 <p><a href="https://www.recraft.ai/"><strong>Recraft</strong></a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
 <p><a href="https://blog.csdn.net/qq_66536007/article/details/140515188">overleaft</a></p>
 <p><a href="https://tool.liumingye.cn">liumingyetool</a></p>
 <p><a href="音视频批注"><strong>Kami插件</strong></a> <a href="https://woordwall.net">Wordwall</a>交互式游戏</p>
-<p><a href="https://codepen.io">codepen</a> <a href="https://jsfiddle.net">jsfiddle</a> 在线编辑器（html/css/js）</p>
+<p><a href="https://www.toolhelper.cn/Html/Preview">html预览</a> <a href="https://codepen.io">codepen</a> <a href="https://jsfiddle.net">jsfiddle</a> 在线编辑器（html/css/js）</p>
+<p><a href="https://www.yourware.so">html部署</a></p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
