--- a/url.html
+++ b/url.html
@@ -1501,9 +1501,12 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://www.recraft.ai/"><strong>Recraft</strong></a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
 <p><a href="https://blog.csdn.net/qq_66536007/article/details/140515188">overleaft</a></p>
 <p><a href="https://tool.liumingye.cn">liumingyetool</a></p>
-<p><a href="音视频批注"><strong>Kami插件</strong></a> <a href="https://woordwall.net">Wordwall</a>交互式游戏</p>
+<p><a href="https://www.kamiapp.com/"><strong>Kami插件</strong></a>音视频批注
+[插件链接]((<a href="https://www.chajianxw.com/product-tool/21782.html" class="uri">https://www.chajianxw.com/product-tool/21782.html</a>) <a href="https://woordwall.net">Wordwall</a>交互式游戏</p>
 <p><a href="https://www.toolhelper.cn/Html/Preview">html预览</a> <a href="https://codepen.io">codepen</a> <a href="https://jsfiddle.net">jsfiddle</a> 在线编辑器（html/css/js）</p>
 <p><a href="https://www.yourware.so">html部署</a></p>
+<p><a href="https://www.chajianxw.com/">插件小屋</a>
+[2024年最受欢迎的谷歌浏览器插件]</p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
