--- a/url.html
+++ b/url.html
@@ -1509,6 +1509,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://www.yourware.so">html部署</a></p>
 <p><a href="https://www.chajianxw.com/">插件小屋</a>
 [2024年最受欢迎的谷歌浏览器插件]</p>
+<p><a href="imgse.com">路过图床</a> 994 <a href="smms.app">sm.ms</a></p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
