--- a/url.html
+++ b/url.html
@@ -1526,7 +1526,8 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="python" class="section level1">
 <h1>Python</h1>
-<p><a href="https://hub.coding61.com">coding</a> <a href="https://google.com">google collab</a></p>
+<p><a href="https://hub.coding61.com">coding</a> <a href="https://google.com">google collab</a> <a href="https://bohrium.dp.tech">玻尔学术</a></p>
+<p><a href="https://tool.ailln.com/">Deeplot代码可视化作图</a></p>
 </div>
 <div id="github" class="section level1">
 <h1>Github</h1>
