--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-03-13" />
+<meta name="date" content="2025-03-15" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-03-13</h4>
+<h4 class="date">2025-03-15</h4>
 
 </div>
 
@@ -1481,13 +1481,14 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://chatgpt.com"><strong>ChatGPT</strong></a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
 <p><a href="https://perplexity.ai"><strong>Perplexity</strong></a> <a href="https://mplx.run">MiniPerplexity</a></p>
 <p><a href="https://aistudio.google.com/"><strong>AIstudio</strong></a>
-<a href="https://deepseek.com">Deepseek</a></p>
+(图片生成) <a href="https://deepseek.com">Deepseek</a></p>
 <p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com"><strong>NotebookLM</strong></a></p>
 <p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a> <a href="https://www.canva.com">Canva</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
 [Bolt.new]</p>
 <p><a href="https://manus.im"><strong>Manus</strong></a></p>
 <p><a href="ai.html"><strong>AI应用</strong></a></p>
+<p><a href="https://www.runjs.cool/"><strong>前端工具箱</strong></a> <a href="https://md2card.com/zh">md2card</a> <a href="https://ppt.runjs.cool">md2ppt</a></p>
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
@@ -1510,6 +1511,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://www.chajianxw.com/">插件小屋</a>
 [2024年最受欢迎的谷歌浏览器插件]</p>
 <p><a href="imgse.com">路过图床</a> 994 <a href="smms.app">sm.ms</a></p>
+<p><a href="https://www.pickpin.cn">Pickpin截图标注录屏</a> <a href="https://getquicker.net">quicker</a> <a href="https://zh.snipaste.com">snipaste</a></p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
