--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-03-20" />
+<meta name="date" content="2025-03-24" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-03-20</h4>
+<h4 class="date">2025-03-24</h4>
 
 </div>
 
@@ -1483,7 +1483,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://aistudio.google.com"><strong>AIstudio</strong>图片生成</a>
 <a href="https://huggingface.co/spaces/philschmid/image-generation-editing?continueFlag=6a2e6b25c6b8a9ec8598c7b12e7d808c">图片生成编辑网页APP</a>
 <a href="https://gemini.google.com">googledeepsearch</a></p>
-<p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://www.metaso.cn">Metaso</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com"><strong>NotebookLM</strong></a> <a href="https://quark.cn">quark</a> <a href="https://yuewen.cn">阶跃</a>
+<p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://www.xiaohuanxiong.com">办公小浣熊</a> <a href="https://www.metaso.cn">Metaso</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com"><strong>NotebookLM</strong></a> <a href="https://quark.cn">quark</a> <a href="https://yuewen.cn">阶跃</a>
 <a href="https://yuanbao.tencent.cn">元宝</a></p>
 <p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a> <a href="https://www.canva.com">Canva</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
@@ -1514,6 +1514,7 @@ document.addEventListener("DOMContentLoaded", function() {
 [2024年最受欢迎的谷歌浏览器插件]</p>
 <p><a href="imgse.com">路过图床</a> 994 <a href="smms.app">sm.ms</a></p>
 <p><a href="https://www.pickpin.cn">Pickpin截图标注录屏</a> <a href="https://getquicker.net">quicker</a> <a href="https://zh.snipaste.com">snipaste</a></p>
+<p><a href="https://www.datatool.vip">videodown</a></p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
