--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-03-24" />
+<meta name="date" content="2025-03-30" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-03-24</h4>
+<h4 class="date">2025-03-30</h4>
 
 </div>
 
@@ -1514,7 +1514,7 @@ document.addEventListener("DOMContentLoaded", function() {
 [2024年最受欢迎的谷歌浏览器插件]</p>
 <p><a href="imgse.com">路过图床</a> 994 <a href="smms.app">sm.ms</a></p>
 <p><a href="https://www.pickpin.cn">Pickpin截图标注录屏</a> <a href="https://getquicker.net">quicker</a> <a href="https://zh.snipaste.com">snipaste</a></p>
-<p><a href="https://www.datatool.vip">videodown</a></p>
+<p><a href="https://www.datatool.vip">videodown</a> <a href="https://cobalt.tools/">videodown2</a></p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
